<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_lbl_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="9pt"
                android:layout_weight=".7"/>

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="9pt"
                android:layout_weight=".3"
                android:gravity="right"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_lbl_name"
                android:text="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="9pt"
                android:layout_weight=".7"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="9pt"
                android:layout_weight=".3"
                android:gravity="right"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_lbl_desc"
                android:text="@string/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="9pt"
                android:layout_weight=".6"/>

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="9pt"
                android:layout_weight=".4"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_lbl_suburb"
                android:text="@string/suburb_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="9pt"
                android:layout_weight=".6"/>

            <TextView
                android:id="@+id/tv_suburb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="9pt"
                android:layout_weight=".4"
                android:gravity="right"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>
        
    </LinearLayout>

</ScrollView>
